@@ -1,5 +1,9 @@
 qtimageformats-opensource-src (5.3.0-4) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Disable tests until we finish the transition. Now we seem to have problem
+    with libwebp on armel.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 07 Jun 2014 09:01:04 -0300
 
 qtimageformats-opensource-src (5.3.0-3) unstable; urgency=medium
